Tweak build (#61)
* Tweak build and support profiling

* Fix the failing build

* Fix the failing build 2

* Tweak build 2

* Tweak build 3

* Tweak build 4

* Avoid running tests twice

(cherry picked from commit a738382fa35716660c0e0ffdba32e086fcd88de5)