@@ -133,14 +133,18 @@ wrapper {
 }
 
 test {
-    jvmArgs '-ea', "-Xms512m", "-Xmx1g", "-XX:+UseConcMarkSweepGC", "-Dgroovy.antlr4.cache.threshold=150", "-Dgroovy.permissive.property.access=true"
+    def commonJvmArgs = ['-ea', "-Xms512m", "-Xmx2g", "-XX:+UseG1GC", "-XX:MaxMetaspaceSize=512m", "-Dgroovy.antlr4.cache.threshold=150", "-Dgroovy.permissive.property.access=true", "-Duser.language=en"]
+    if (rootProject.hasProperty('async.profiler.agentpath')) {
+        commonJvmArgs << "-agentpath:${rootProject.property('async.profiler.agentpath')}=start,file=build/reports/profile-${System.nanoTime()}.svg"
+    }
+    jvmArgs(*commonJvmArgs)
 
     def headless = System.properties['java.awt.headless']
     if (headless == 'true') {
         systemProperties 'java.awt.headless': 'true'
     }
 
-    forkEvery = 50
+    forkEvery = 0
     maxParallelForks = isRunningOnCI() ? 1 : Runtime.runtime.availableProcessors()
     scanForTestClasses = true
     ignoreFailures = false
